<resources>
    <string name="app_name">Hidden Words</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="game_name_upper">HIDDEN WORDS</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="hidden">HIDDEN</string>
    <string name="abc">ABC</string>
    <string name="qld">QLD</string>
    <string name="vsd">VSD</string>
    <string name="words">WORDS</string>
    <string name="sing_up">SING UP</string>
    <string name="incorrect_login">Incorrect login</string>
    <string name="incorrect_password">Incorrect password. It must be more than 8 characters.</string>
    <string name="zxc">ZXC</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="random_words">AKOJ33OQBICUSBQUKQDIJIQKQQKPSOIFSIOIZNCAJINCNIJISKAILQASIHKDSHCIB</string>
    <string name="random_words_2">ABJADIOWPHOIBJABKCSQDBPKZPAOQCNQOIQNSSFRIQNSIRIAOANKCSYFUOQYR</string>
    <string name="sing_up_error">Please, try again.</string>
    <string name="sing_in_error">Incorrect login or password</string>
    <string name="one">1</string>
    <string name="levels">Levels</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eigth">8</string>
    <string name="nine">9</string>
    <string name="your_profile">Your Profile</string>
    <string name="achievements">Achievements</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="first_level">First Level</string>
    <string name="hamster">HAMSTER</string>
    <string name="random_words_first_level">AKOJI33OQBICUSBQUDIJIQKQQKPISOIFSIOIZNCAJINCNIJISKAILQASIHKDSHCIB</string>
    <string name="enter_word">Enter word</string>
    <string name="try_one_more_time">Try one more time!</string>
    <string name="success">Success!</string>
    <string name="number">NUMBER</string>
    <string name="cucumber">CUCUMBER</string>
    <string name="engineering">ENGINEERING</string>
    <string name="second_level">Second Level</string>
    <string name="disappointment">DISAPPOINTMENT</string>
    <string name="player">PLAYER</string>
    <string name="soon">Content will open soon!</string>
    <string name="transmission">TRANSMISSION</string>
    <string name="premium">PREMIUM</string>
    <string name="firebase_error_invalid_email">The email address is badly formatted.</string>
</resources>