<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_to"
        android:layout_marginTop="10sp"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/white" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/game_name_upper"
        android:textAlignment="center"
        android:layout_marginTop="20sp"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_below="@+id/textView"
        android:gravity="center_horizontal"
        />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/vsd"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginHorizontal="92dp"
        android:textSize="30sp"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="125sp"
        />


    <TextView
        android:id="@+id/words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginHorizontal="150dp"
        android:layout_marginTop="125dp"
        android:gravity="center"
        android:text="@string/words"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="257dp"
        android:layout_marginTop="125dp"
        android:gravity="center"
        android:text="@string/qld"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginStart="257dp" />

    <TextView
        android:id="@+id/abc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="75dp"
        android:text="@string/abc"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginStart="92dp" />

    <TextView
        android:id="@+id/hidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="75dp"
        android:gravity="center_horizontal"
        android:text="@string/hidden"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        android:layout_marginStart="150dp" />

    <TextView
        android:id="@+id/zxc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:gravity="center_horizontal"
        android:layout_marginLeft="260dp"
        android:layout_marginTop="75dp"
        android:text="@string/zxc"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginStart="260dp" />

    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_below="@+id/words"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/login"
        android:layout_marginStart="110dp"
        android:autofillHints="Login" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/login"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="110dp"
        android:autofillHints="Password" />

    <Button
        android:id="@+id/log_in"
        android:layout_width="206dp"
        android:layout_height="49dp"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:layout_below="@+id/password"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="110dp" />

    <Button
        android:id="@+id/sing_up"
        android:layout_width="206dp"
        android:layout_height="49dp"
        android:text="@string/sing_up"
        android:textColor="@color/black"
        android:layout_marginLeft="110dp"
        android:layout_below="@+id/log_in"
        android:layout_marginTop="15dp"
        android:layout_marginStart="110dp"/>


    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/words"
        android:layout_marginTop="50dp"
        android:textColor="@color/red"
        android:textAlignment="center"
        android:textSize="20sp"
        android:gravity="center_horizontal" />

    <!--    <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_below="@+id/words"
            android:layout_marginTop="50dp"
            android:layout_marginStart="190dp"
            tools:ignore="MissingConstraints" />-->


</RelativeLayout>