<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RegistrationActivity">


    <TextView
        android:id="@+id/randomWords1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center_horizontal"
        android:text="@string/random_words"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="30sp"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/hidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="80sp"
        android:gravity="center_horizontal"
        android:text="@string/hidden"
        android:textAlignment="viewStart"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        tools:ignore="RtlCompat" />


    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/randomWords1"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/login"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:gravity="center_horizontal" />



    <Button
        android:id="@+id/sing_up"
        android:layout_width="206dp"
        android:layout_height="49dp"
        android:text="@string/sing_up"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="110dp"
        android:layout_below="@+id/password"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="20dp" />


    <TextView
        android:id="@+id/words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/words"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        android:layout_below="@+id/password"
        android:layout_marginTop="270dp" />


    <TextView
        android:id="@+id/randomWords2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/random_words_2"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_below="@+id/password"
        android:layout_marginTop="200dp"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/randomWords1"
        android:layout_marginTop="50dp"
        android:textColor="@color/red"
        android:textAlignment="center"
        android:textSize="20sp"
        android:gravity="center_horizontal" />
</RelativeLayout>